EXTRA_DIST= WordGraphStateData.h WordGraph.h WordGraph.cc		\
WordGraphArcId.h WordGraphArc.h WordAndCharLevelOps.h			\
WgProcessorForAnlp.h WgHandler.h WgHandler.cc thot_wg_proc_pars.h	\
thot_wg_proc.cc RejectedWordsSet.h PrefAlignInfo.h PfsmEcm.h		\
PfsmEcmForWg.h PfsmEcmForWgEsi.h PfsmEcmForWg.cc PfsmEcm.cc		\
NonPbEcModelForNbUcat.h NonPbEcModelForNbUcat.cc NbSearchStack.h	\
NbSearchStack.cc NbSearchHyp.h NbestCorrections.h HypStateIndex.h	\
_editDist.h EditDistForVecString.h EditDistForVecString.cc		\
EditDistForVec.h EditDistForStr.h EditDistForStr.cc _editDistBasedEcm.h	\
_editDistBasedEcm.cc BaseWgProcessorForAnlp.h				\
BaseErrorCorrectionModel.h BaseErrorCorrectionModel.cc BaseEditDist.h	\
BaseEcModelForNbUcat.h BaseEcmForWg.h
