EXTRA_DIST= vecx_x_incr_enc.h vecx_x_incr_ecpm.h vecx_x_incr_cptable.h	\
thot_lm_perp.cc thot_ilm_perp.cc thot_lm_weight_upd.cc lm_ienc.h	\
lm_ienc.cc IncrNgramLM.h _incrNgramLM.h IncrNgramLM.cc			\
IncrJelMerNgramLM.h _incrJelMerNgramLM.h IncrJelMerNgramLM.cc		\
IncrInterpNgramLM.h _incrInterpNgramLM.h _incrInterpNgramLM.cc		\
IncrInterpNgramLM.cc IncrEncoder.h _incrEncCondProbModel.h		\
IncrCondProbTable.h im_pair.h BaseIncrEncoder.h				\
BaseIncrEncCondProbModel.h BaseIncrCondProbTable.h			\
BaseIncrCondProbModel.h BaseWordPenaltyModel.h WordPenaltyModel.h	\
WordPenaltyModel.cc WordPredictor.h WordPredictor.cc			\
IncrJelMerNgramLMFactory.cc WordPenaltyModelFactory.cc
