EXTRA_DIST= WordIndex.h WordAligMatrix.h WordAligMatrix.cc uiPairHashF.h	\
uiHashF.h TrieVecs.h TrieOfWords.h Trie.h TrieBidOfWords.h TrieBid.h	\
StrProcUtils.h StrProcUtils.cc StatModelDefs.h SingleWordVocab.h	\
SingleWordVocab.cc SimpleTrie.h _simpleTrie.h Score.h Prob.h Prob.cc	\
printAligFuncs.h printAligFuncs.cc PositionIndex.h OrderedVector.h	\
options.h options.cc NbestTransTable.h NbestTableNode.h myVector.h	\
mem_alloc_utils.h mem_alloc_utils.cc MathFuncs.h MathFuncs.cc		\
MathDefs.h lt_op_vec.h LogCount.h LM_Defs.h SmtDefs.h ins_op_pair.h	\
getline.h getline.c getdelim.h getdelim.c ErrorDefs.h ctimer.h ctimer.c	\
Count.h ClassDic.h ClassDic.cc Bitset.h BasicSocketUtils.h		\
BasicSocketUtils.cc BaseNgramLM.h BaseIncrNgramLM.h BackoffNode.h	\
awkInputStream.h awkInputStream.cc DynClassFileHandler.h		\
DynClassFileHandler.cc SimpleDynClassLoader.h KenLm.h KenLm.cc		\
KenLmFactory.cc
