EXTRA_DIST= _incrPhraseModel.cc _incrPhraseModel.h			\
_wbaIncrPhraseModel.cc _wbaIncrPhraseModel.h AligInfo.h			\
AlignmentContainer.cc AlignmentContainer.h AlignmentExtractor.cc	\
AlignmentExtractor.h BaseCountPhraseModel.h BaseIncrPhraseModel.cc	\
BaseIncrPhraseModel.h BasePhraseModel.cc BasePhraseModel.h		\
BasePhrasePairFilter.h BasePhraseTable.h BdbPhraseModel.cc		\
BdbPhraseModel.h BdbPhraseModelFactory.cc BdbPhraseTable.cc		\
BdbPhraseTable.h BpSet.cc BpSet.h BpSetInfo.h Cache_ct_.cc Cache_ct_.h	\
Cache_lct_.cc Cache_lct_.h CategPhrasePairFilter.cc			\
CategPhrasePairFilter.h CellAlignment.h CellID.h FastBdbPhraseModel.cc	\
FastBdbPhraseModel.h FastBdbPhraseModelFactory.cc FastBdbPhraseTable.cc	\
FastBdbPhraseTable.h IncrPhraseModel.cc IncrPhraseModel.h		\
IncrPhraseModelFactory.cc PhraseDefs.h PhraseExtractionCell.h		\
PhraseExtractionTable.cc PhraseExtractionTable.h			\
PhraseExtractParameters.h PhraseExtractUtils.cc PhraseExtractUtils.h	\
PhraseId.h PhrasePair.h PhrasePairInfo.h PhraseSortCriterion.h		\
PhraseTransTableNodeData.h SegLenTable.cc SegLenTable.h			\
SentSegmentation.h SrcSegmLenTable.cc SrcSegmLenTable.h SrfBisegm.h	\
SrfNodeInfo.h SrfNodeInfoMap.cc SrfNodeInfoMap.h SrfNodeKey.cc		\
SrfNodeKey.h StlPhraseTable.h StlPhraseTable.cc thot_alig_op.cc		\
thot_gen_phr_model.cc thot_query_pm.cc thot_ttable_to_fbdb.cc		\
thot_ttable_to_leveldb.cc TrgCutsTable.cc TrgCutsTable.h		\
TrgSegmLenTable.cc TrgSegmLenTable.h VecUnsignedIntSortCriterion.h	\
WbaIncrPhraseModel.cc WbaIncrPhraseModel.h WbaIncrPhraseModelFactory.cc

