EXTRA_DIST= AligInfo.h AlignmentContainer.h AlignmentExtractor.h	\
BaseCountPhraseModel.h BaseIncrPhraseModel.h BasePhraseModel.h		\
BasePhrasePairFilter.h BasePhraseTable.h BdbPhraseModel.h		\
BdbPhraseTable.h BpSet.h BpSetInfo.h CategPhrasePairFilter.h		\
CellAlignment.h CellID.h FastBdbPhraseModel.h FastBdbPhraseTable.h	\
HatTriePhraseTable.h _incrPhraseModel.h IncrPhraseModel.h		\
LevelDbPhraseModel.h LevelDbPhraseTable.h PhraseDefs.h			\
PhraseExtractionCell.h PhraseExtractionTable.h				\
PhraseExtractParameters.h PhraseExtractUtils.h PhraseId.h PhrasePair.h	\
PhrasePairInfo.h PhraseSortCriterion.h PhraseTransTableNodeData.h	\
SegLenTable.h SentSegmentation.h SrcSegmLenTable.h SrfBisegm.h		\
SrfNodeInfo.h SrfNodeInfoMap.h SrfNodeKey.h StlPhraseTable.h		\
StrictCategPhrasePairFilter.h TrgCutsTable.h TrgSegmLenTable.h		\
VecUnsignedIntSortCriterion.h _wbaIncrPhraseModel.h			\
WbaIncrPhraseModel.h AlignmentContainer.cc AlignmentExtractor.cc	\
BaseIncrPhraseModel.cc BasePhraseModel.cc BdbPhraseModel.cc		\
BdbPhraseModelFactory.cc BdbPhraseTable.cc BpSet.cc Cache_ct_.cc	\
Cache_lct_.cc CategPhrasePairFilter.cc FastBdbPhraseModel.cc		\
FastBdbPhraseModelFactory.cc FastBdbPhraseTable.cc			\
HatTriePhraseTable.cc _incrPhraseModel.cc IncrPhraseModel.cc		\
IncrPhraseModelFactory.cc LevelDbPhraseModel.cc				\
LevelDbPhraseModelFactory.cc LevelDbPhraseTable.cc			\
PhraseExtractionTable.cc PhraseExtractUtils.cc SegLenTable.cc		\
SrcSegmLenTable.cc SrfNodeInfoMap.cc SrfNodeKey.cc StlPhraseTable.cc	\
StrictCategPhrasePairFilter.cc thot_alig_op.cc thot_gen_phr_model.cc	\
thot_query_pm.cc thot_ttable_to_fbdb.cc thot_ttable_to_leveldb.cc	\
TrgCutsTable.cc TrgSegmLenTable.cc _wbaIncrPhraseModel.cc		\
WbaIncrPhraseModel.cc WbaIncrPhraseModelFactory.cc
