EXTRA_DIST= LM_State.h PpInfo.h SmtModel.h DynClassFactoryHandler.h	\
DynClassFactoryHandler.cc WgUncoupledAssistedTrans.h			\
UserNameToUserIdMap.h UserNameToUserIdMap.cc ThotMtFactoryInitPars.h	\
ThotMtFactory.h ThotMtFactory.cc ThotMtEngine.h ThotMtEngine.cc		\
ThotImtSession.h ThotImtSession.cc ThotImtFactoryInitPars.h		\
ThotImtFactory.h ThotImtFactory.cc ThotImtEngine.h ThotImtEngine.cc	\
thot_server_pars.h thot_server.cc ThotDecoderUserPars.h			\
ThotDecoderState.h ThotDecoderPerUserVars.h ThotDecoder.h		\
ThotDecoderCommonVars.h ThotDecoderClient.h ThotDecoderClient.cc	\
ThotDecoder.cc thot_ms_dec.cc thot_client_pars.h thot_client.cc		\
thot_get_ll_weights.cc thot_scorer.cc thot_calc_bleu.cc thot_ms_alig.cc	\
SwModelPars.h SwModelInfo.h _stack_decoder_statistics.h			\
_stackDecoderRec.h _stackDecoder.h SourceSegmentation.h			\
TranslationConstraints.h TranslationConstraints.cc SmtStack.h		\
_smtStack.h SmtMultiStackRec.h _smtMultiStack.h				\
BaseLogLinWeightUpdater.h KbMiraLlWu.h KbMiraLlWu.cc BaseScorer.h	\
BaseMiraScorer.h MiraBleu.h MiraBleu.cc thot_ll_weight_upd_nblist.cc	\
_smtModel.h ScoreCompDefs.h _phrSwTransModel.h PhrScoreInfo.h		\
PhrScoreInfo.cc PhrNbestTransTableRefKey.h PhrNbestTransTableRefKey.cc	\
PhrNbestTransTableRef.h PhrNbestTransTablePrefKey.h			\
PhrNbestTransTablePrefKey.cc PhrNbestTransTablePref.h			\
PhrNbestTransTable.h PhrLocalSwLiTmHypRec.h PhrLocalSwLiTm.h		\
PhrLocalSwLiTm.cc PhrHypState.h PhrHypState.cc				\
PhrHypNumcovJumpsEqClassF.h PhrHypNumcovJumpsEqClassF.cc		\
PhrHypNumcovJumps01EqClassF.h PhrHypNumcovJumps01EqClassF.cc		\
PhrHypEqClassF.h PhrHypEqClassF.cc PhrHypData.h PhrasePairCacheTable.h	\
PhraseModelPars.h PhraseModelInfo.h _phraseHypothesisRec.h		\
_phraseHypothesis.h PbTransModelInputVars.h PhraseCacheTable.h		\
NbestTransCacheData.h _phraseBasedTransModel.h OnlineTrainingPars.h	\
NgramCacheTable.h _nbUncoupledAssistedTrans.h multi_stack_decoder_rec.h	\
LangModelPars.h LangModelInfo.h HypStateDict.h HypStateDictData.h	\
HypSortCriterion.h client_server_defs.h CatDefs.h bleu.h bleu.cc	\
BaseStackDecoder.h BaseSmtStack.h BaseSmtMultiStack.h BaseSmtModel.h	\
BasePhraseHypothesisRec.h BasePhraseHypothesis.h			\
BasePbTransModelStats.h BasePbTransModel.h BaseHypState.h		\
BaseHypState.cc BaseHypothesisRec.h BaseHypothesis.h HypDebugData.h	\
BaseAssistedTrans.h _assistedTrans.h KbMiraLlWuFactory.cc		\
multi_stack_decoder_rec__swli_factory.cc				\
WgUncoupledAssistedTransSwLiFactory.cc MiraBleuFactory.cc
