EXTRA_DIST= _assistedTrans.h BaseAssistedTrans.h BaseHypothesis.h	\
BaseHypothesisRec.h BaseHypState.h BaseLogLinWeightUpdater.h		\
BaseMiraScorer.h BasePbTransModelFeature.h BasePbTransModel.h		\
BasePbTransModelStats.h BasePhraseHypothesis.h				\
BasePhraseHypothesisRec.h BaseScorer.h BaseSmtModel.h			\
BaseSmtMultiStack.h BaseSmtStack.h BaseStackDecoder.h			\
BaseTranslationMetadata.h bleu.h CatDefs.h chrf.h client_server_defs.h	\
CustomFeatureHandler.h DictFeat.h DirectPhraseModelFeat.h		\
DynClassFactoryHandler.h FeaturesInfo.h HypDebugData.h			\
HypSortCriterion.h HypStateDictData.h HypStateDict.h			\
InversePhraseModelFeat.h JsonTranslationMetadata.h KbMiraLlWu.h		\
LangModelFeat.h LangModelInfo.h LangModelPars.h LangModelsInfo.h	\
LevelDbDict.h LevelDbDictFeat.h LM_State.h MiraBleu.h MiraChrF.h	\
MiraGtm.h MiraWer.h multi_stack_decoder_rec.h NbestTransCacheData.h	\
_nbUncoupledAssistedTrans.h NgramCacheTable.h OnlineTrainingPars.h	\
OnTheFlyDictFeat.h _pbTransModel.h PbTransModel.h			\
PbTransModelInputVars.h PbTransModelPars.h PhraseBasedTmHyp.h		\
PhraseBasedTmHypRec.h _phraseBasedTransModel.h PhraseCacheTable.h	\
_phraseHypothesis.h _phraseHypothesisRec.h PhraseModelInfo.h		\
PhraseModelPars.h PhraseModelsInfo.h PhrasePairCacheTable.h		\
PhrHypData.h PhrHypDataStr.h PhrHypEqClassF.h				\
PhrHypNumcovJumps01EqClassF.h PhrHypNumcovJumpsEqClassF.h PhrHypState.h	\
PhrLocalSwLiTm.h PhrLocalSwLiTmHypRec.h PhrNbestTransTable.h		\
PhrNbestTransTablePref.h PhrNbestTransTablePrefKey.h			\
PhrNbestTransTableRef.h PhrNbestTransTableRefKey.h PhrScoreInfo.h	\
_phrSwTransModel.h PpInfo.h ScoreCompDefs.h _smtModel.h SmtModel.h	\
SmtModelLegacy.h SmtModelUtils.h _smtMultiStack.h SmtMultiStackRec.h	\
_smtStack.h SmtStack.h SourceSegmentation.h SrcPhraseLenFeat.h		\
SrcPosJumpFeat.h _stackDecoder.h _stackDecoderRec.h			\
_stack_decoder_statistics.h StdFeatureHandler.h SwModelInfo.h		\
SwModelPars.h SwModelsInfo.h thot_client_pars.h ThotDecoderClient.h	\
ThotDecoderCommonVars.h ThotDecoder.h ThotDecoderPerUserVars.h		\
ThotDecoderState.h ThotDecoderUserPars.h ThotImtEngine.h		\
ThotImtFactory.h ThotImtFactoryInitPars.h ThotImtSession.h		\
ThotMtEngine.h ThotMtFactory.h ThotMtFactoryInitPars.h			\
thot_server_pars.h TranslationMetadata.h TrgPhraseLenFeat.h		\
UserNameToUserIdMap.h WeightUpdateUtils.h WgUncoupledAssistedTrans.h	\
WordPenaltyFeat.h WpModelInfo.h BaseHypState.cc bleu.cc chrf.cc		\
CustomFeatureHandler.cc DictFeat.cc DictFeatPhrScoreInfoFactory.cc	\
DirectPhraseModelFeat.cc DynClassFactoryHandler.cc			\
InversePhraseModelFeat.cc JsonTranslationMetadataPhrScoreInfoFactory.cc	\
KbMiraLlWu.cc KbMiraLlWuFactory.cc LangModelFeat.cc LevelDbDict.cc	\
LevelDbDictFeat.cc LevelDbDictFeatPhrScoreInfoFactory.cc MiraBleu.cc	\
MiraBleuFactory.cc MiraChrF.cc MiraChrFFactory.cc MiraGtm.cc		\
MiraGtmFactory.cc MiraWer.cc MiraWerFactory.cc				\
multi_stack_decoder_rec__pbtm_factory.cc				\
multi_stack_decoder_rec__swli_factory.cc OnTheFlyDictFeat.cc		\
PhrHypEqClassF.cc PhrHypNumcovJumps01EqClassF.cc			\
PhrHypNumcovJumpsEqClassF.cc PhrHypState.cc PhrLocalSwLiTm.cc		\
PhrNbestTransTablePrefKey.cc PhrNbestTransTableRefKey.cc		\
PhrScoreInfo.cc SmtModelUtils.cc SrcPhraseLenFeat.cc SrcPosJumpFeat.cc	\
StdFeatureHandler.cc test_casmacat_engines.cc thot_calc_bleu.cc		\
thot_check_constraints.cc thot_client.cc thot_dict_to_leveldb.cc	\
ThotDecoder.cc ThotDecoderClient.cc thot_get_srcsents_from_metadata.cc	\
ThotImtEngine.cc ThotImtFactory.cc ThotImtSession.cc			\
thot_li_weight_upd.cc thot_ll_weight_upd_nblist.cc thot_ms_alig.cc	\
thot_ms_dec.cc ThotMtEngine.cc ThotMtFactory.cc thot_scorer.cc		\
thot_server.cc TranslationMetadataPhrScoreInfoFactory.cc		\
TrgPhraseLenFeat.cc UserNameToUserIdMap.cc WeightUpdateUtils.cc		\
WgUncoupledAssistedTransPbTmFactory.cc					\
WgUncoupledAssistedTransSwLiFactory.cc WordPenaltyFeat.cc
