EXTRA_DIST= WeightedIncrNormSlm.h WeightedIncrNormSlm.cc		\
thot_sort_bin_ilextable.cc thot_sort_bin_iibm2atable.cc			\
thot_sort_bin_ihmmatable.cc thot_prune_bin_ilextable.cc			\
thot_merge_bin_ilextable.cc thot_merge_bin_iibm2atable.cc		\
thot_merge_bin_ihmmatable.cc ThotIbmMaxConfid.h				\
ThotIbmMaxConfidFactory.h ThotIbmMaxConfidFactory.cc			\
ThotIbmMaxConfid.cc ThotIbm2Aligner.h ThotIbm2AlignerFactory.h		\
ThotIbm2AlignerFactory.cc ThotIbm2Aligner.cc ThotHmmAligner.h		\
ThotHmmAlignerFactory.h ThotHmmAlignerFactory.cc ThotHmmAligner.cc	\
thot_gen_sw_model_pars.h thot_gen_sw_model.cc				\
thot_gen_bin_lex_filter_info.cc thot_filter_bin_ilextable.cc		\
thot_calc_swm_lgprob.cc test_casmacat_confid.cc test_casmacat_alig.cc	\
SwDefs.h _swAligModel.h SmoothedIncrIbm2AligModel.h			\
SmoothedIncrIbm2AligModel.cc SmoothedIncrIbm1AligModel.h		\
SmoothedIncrIbm1AligModel.cc SentPairCont.h _sentLengthModel.h		\
_sentLengthModel.cc LightSentenceHandler.h LightSentenceHandler.cc	\
LexAuxVar.h _incrSwAligModel.h IncrLexTable.h IncrLexTable.cc		\
IncrIbm2AligTable.h IncrIbm2AligTable.cc IncrIbm2AligModel.h		\
IncrIbm2AligModel.cc IncrIbm1AligModel.h IncrIbm1AligModel.cc		\
IncrHmmP0AligModel.h IncrHmmP0AligModel.cc IncrHmmAligTable.h		\
IncrHmmAligTable.cc IncrHmmAligModel.h IncrHmmAligModel.cc		\
HmmAligInfo.h DoubleMatrix.h DoubleMatrix.cc BestLgProbForTrgWord.h	\
BaseSwAligModel.h BaseStepwiseAligModel.h BaseSentLengthModel.h		\
BaseSentenceHandler.h aSourceHmm.h aSourceHmm.cc aSourceHashF.h		\
aSource.h aSource.cc ashPidxPairHashF.h anjm1ip_anjiMatrix.h		\
anjm1ip_anjiMatrix.cc anjiMatrix.h anjiMatrix.cc
