EXTRA_DIST=                         \
_incrHmmAligModel.h                 \
_incrHmmP0AligModel.h               \
_incrLexTable.h                     \
_incrSwAligModel.h                  \
_sentLengthModel.cc                 \
_sentLengthModel.h                  \
_swAligModel.h                      \
IncrHmmAligTable.h                  \
IncrHmmP0AligModel.cc               \
IncrHmmP0AligModel.h                \
IncrIbm1AligModel.cc                \
IncrIbm1AligModel.h                 \
IncrIbm2AligModel.cc                \
IncrIbm2AligModel.h                 \
IncrIbm2AligTable.cc                \
IncrIbm2AligTable.h                 \
IncrLexLevelDbTable.cc              \
IncrLexLevelDbTable.h               \
IncrLexTable.cc                     \
IncrLexTable.h                      \
LexAuxVar.h                         \
LightSentenceHandler.cc             \
LightSentenceHandler.h              \
SentPairCont.h                      \
SmoothedIncrIbm1AligModel.cc        \
SmoothedIncrIbm1AligModel.h         \
SmoothedIncrIbm2AligModel.cc        \
SmoothedIncrIbm2AligModel.h         \
SwDefs.h                            \
test_casmacat_alig.cc               \
test_casmacat_confid.cc             \
thot_calc_swm_lgprob.cc             \
thot_filter_bin_ilextable.cc        \
thot_gen_bin_lex_filter_info.cc     \
thot_gen_sw_model_pars.h            \
thot_gen_sw_model.cc                \
thot_merge_bin_ihmmatable.cc        \
thot_merge_bin_iibm2atable.cc       \
thot_merge_bin_ilextable.cc         \
thot_prune_bin_ilextable.cc         \
thot_sort_bin_ihmmatable.cc         \
thot_sort_bin_iibm2atable.cc        \
thot_sort_bin_ilextable.cc          \
ThotHmmAligner.cc                   \
ThotHmmAligner.h                    \
ThotHmmAlignerFactory.cc            \
ThotHmmAlignerFactory.h             \
ThotIbm2Aligner.cc                  \
ThotIbm2Aligner.h                   \
ThotIbm2AlignerFactory.cc           \
ThotIbm2AlignerFactory.h            \
ThotIbmMaxConfid.cc                 \
ThotIbmMaxConfid.h                  \
ThotIbmMaxConfidFactory.cc          \
ThotIbmMaxConfidFactory.h           \
WeightedIncrNormSlm.cc              \
WeightedIncrNormSlm.h