EXTRA_DIST= anjiMatrix.h anjm1ip_anjiMatrix.h ashPidxPairHashF.h	\
aSource.h aSourceHashF.h aSourceHmm.h BaseSentenceHandler.h		\
BaseSentLengthModel.h BaseStepwiseAligModel.h BaseSwAligModel.h		\
BestLgProbForTrgWord.h CachedHmmAligLgProb.h DoubleMatrix.h		\
HmmAligInfo.h _incrHmmAligModel.h IncrHmmAligModel.h IncrHmmAligTable.h	\
_incrHmmP0AligModel.h IncrHmmP0AligModel.h IncrIbm1AligModel.h		\
IncrIbm2AligModel.h IncrIbm2AligTable.h IncrLevelDbHmmAligModel.h	\
IncrLevelDbHmmP0AligModel.h IncrLexLevelDbTable.h _incrLexTable.h	\
IncrLexTable.h _incrSwAligModel.h LexAuxVar.h LightSentenceHandler.h	\
_sentLengthModel.h SentPairCont.h SmoothedIncrIbm1AligModel.h		\
SmoothedIncrIbm2AligModel.h _swAligModel.h SwDefs.h			\
thot_gen_sw_model_pars.h ThotHmmAlignerFactory.h ThotHmmAligner.h	\
ThotIbm2AlignerFactory.h ThotIbm2Aligner.h ThotIbmMaxConfidFactory.h	\
ThotIbmMaxConfid.h WeightedIncrNormSlm.h anjiMatrix.cc			\
anjm1ip_anjiMatrix.cc aSource.cc aSourceHmm.cc CachedHmmAligLgProb.cc	\
DoubleMatrix.cc _incrHmmAligModel.cc IncrHmmAligModel.cc		\
IncrHmmAligTable.cc _incrHmmP0AligModel.cc IncrHmmP0AligModel.cc	\
IncrHmmP0AligModelFactory.cc IncrIbm1AligModel.cc IncrIbm2AligModel.cc	\
IncrIbm2AligTable.cc IncrLevelDbHmmAligModel.cc				\
IncrLevelDbHmmP0AligModel.cc IncrLevelDbHmmP0AligModelFactory.cc	\
IncrLexLevelDbTable.cc IncrLexTable.cc LightSentenceHandler.cc		\
_sentLengthModel.cc SmoothedIncrIbm1AligModel.cc			\
SmoothedIncrIbm2AligModel.cc SmoothedIncrIbm2AligModelFactory.cc	\
test_casmacat_alig.cc test_casmacat_confid.cc thot_calc_swm_lgprob.cc	\
thot_filter_bin_ilextable.cc thot_gen_bin_lex_filter_info.cc		\
thot_gen_sw_model.cc ThotHmmAligner.cc ThotHmmAlignerFactory.cc		\
ThotIbm2Aligner.cc ThotIbm2AlignerFactory.cc ThotIbmMaxConfid.cc	\
ThotIbmMaxConfidFactory.cc thot_lextable_to_leveldb.cc			\
thot_merge_bin_ihmmatable.cc thot_merge_bin_iibm2atable.cc		\
thot_merge_bin_ilextable.cc thot_prune_bin_ilextable.cc			\
thot_sort_bin_ihmmatable.cc thot_sort_bin_iibm2atable.cc		\
thot_sort_bin_ilextable.cc WeightedIncrNormSlm.cc
