EXTRA_DIST= thot_test.cc KbMiraLlWuTest.h KbMiraLlWuTest.cc	    \
_incrLexTableTest.h _incrLexTableTest.cc                        \
_phraseTableTest.h _phraseTableTest.cc                          \
IncrLexLevelDbTableTest.h IncrLexLevelDbTableTest.cc            \
IncrLexTableTest.h IncrLexTableTest.cc                          \
LevelDbNgramTableTest.h LevelDbNgramTableTest.cc                \
LevelDbPhraseTableTest.h LevelDbPhraseTableTest.cc              \
StlPhraseTableTest.h StlPhraseTableTest.cc                      \
MiraChrFTest.h MiraChrFTest.cc
