EXTRA_DIST= HatTriePhraseTableTest.h IncrLexLevelDbTableTest.h		\
_incrLexTableTest.h IncrLexTableTest.h JsonTranslationMetadataTest.h	\
KbMiraLlWuTest.h LevelDbNgramTableTest.h LevelDbPhraseTableTest.h	\
MiraChrFTest.h _phraseTableTest.h StlPhraseTableTest.h			\
TranslationMetadataTest.h HatTriePhraseTableTest.cc			\
IncrLexLevelDbTableTest.cc _incrLexTableTest.cc IncrLexTableTest.cc	\
JsonTranslationMetadataTest.cc KbMiraLlWuTest.cc			\
LevelDbNgramTableTest.cc LevelDbPhraseTableTest.cc MiraChrFTest.cc	\
_phraseTableTest.cc StlPhraseTableTest.cc thot_test.cc			\
TranslationMetadataTest.cc
