EXTRA_DIST= thot_sort_ttable2.sh thot_remove_st_lengths2.sh		\
thot_put_st_lengths2.sh thot_pbs_gen_phr_model.sh			\
thot_pbs_gen_batch_phr_model.sh thot_pbs_alig_op.sh			\
thot_merge_seglen_counts.sh thot_merge_counts.sh			\
thot_get_nbest_for_trg.sh thot_gen_phr_model_mr.sh thot_flip_phr.sh	\
thot_filter_ttable.sh thot_filter_ttable_given_corpus.sh		\
thot_pbs_filter_ttable.sh thot_cut_ttable.sh
