EXTRA_DIST= thot_sort_ttable.sh thot_pbs_gen_phr_model.sh		\
thot_pbs_gen_batch_phr_model.sh thot_pbs_alig_op.sh			\
thot_merge_seglen_counts.sh thot_merge_counts.sh			\
thot_get_nbest_for_trg.sh thot_gen_phr_model_mr.sh thot_flip_phr.sh	\
thot_filter_ttable.sh thot_filter_ttable_given_corpus.sh		\
thot_pbs_filter_ttable.sh thot_pbs_get_nbest_for_trg.sh			\
thot_cut_ttable.sh thot_conv_giza_alig_file.py thot_gen_fbdb_ttable.sh	\
thot_gen_datrie_ttable.sh thot_gen_exhaustive_giza_alig.py
