EXTRA_DIST= thot_decoder.sh thot_aligner.sh thot_dhs_smt_trgfunc.sh	\
thot_dhs_cat_trgfunc.sh thot_conf_interv_smt.sh thot_smt_samplesize.sh	\
thot_conf_interv_cat.sh thot_smt_using_client.sh			\
thot_cat_using_client.sh thot_calc_wer.py thot_get_sys_trans.sh		\
thot_extract_hyp_info.sh thot_ll_weight_upd.sh thot_gen_nblists.sh	\
thot_rnnlm_rescore.sh thot_nblist_tune.sh thot_dhs_nbl_rescore.sh	\
thot_serialize_server_log.py thot_get_nblist_segm_info.py
