EXTRA_DIST= thot_prune_text_ilextable.sh thot_pbs_gen_best_sw_alig.sh	\
thot_pbs_gen_batch_sw_model.sh thot_merge_text_ilextable.sh		\
thot_merge_text_iibm2atable.sh thot_merge_text_ihmmatable.sh		\
thot_get_swm_vocab.sh thot_gen_wigauss_slen_model.sh			\
thot_gen_batch_sw_model_mr.sh thot_format_corpus_csl.sh			\
thot_filter_text_ilextable.sh
